# followbench-evaluation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: conflict-detector.prompt.md  copy-file.prompt.md  deepseek-instructions.prompt.md  lost-in-the-middle.prompt.md  qwen3-instructions.prompt.md  refine-for-deepseek-v3.1.prompt.md  refine-for-qwen3.prompt.md
example_prompts/: README.md
notebooks/: explore_followbench.ipynb
src/: README.md  __init__.py  config.py  evaluate_transformed.py  followbench_generator.py  llm_evaluator.py  model_inference.py  pipeline.py  prompt_transformer.py  results_analyzer.py  run_followbench.py
